Extra docs to remove warnings